--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
     "react/": "https://aistudiocdn.com/react@^19.1.1/",
     "react": "https://aistudiocdn.com/react@^19.1.1",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.16.0"
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.16.0",
+    "@vercel/analytics/": "https://aistudiocdn.com/@vercel/analytics@^1.3.1/",
+    "@vercel/analytics/react": "https://aistudiocdn.com/@vercel/analytics@^1.3.1/react"
   }
 }
 </script>
