--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
       .animate-pulse-bright {
         animation: pulse-bright 1.5s ease-in-out infinite;
       }
+      .animate-flash-green {
+        animation: flash-green 0.7s ease-out forwards;
+      }
 
       @keyframes fade-in {
         from { opacity: 0; transform: scale(0.95); }
@@ -58,6 +61,11 @@
         50% {
           text-shadow: 0 0 20px #0891b2, 0 0 40px #0891b2;
         }
+      }
+      
+      @keyframes flash-green {
+        0%, 100% { box-shadow: 0 0 0px rgba(34, 197, 94, 0); }
+        50% { box-shadow: 0 0 40px 10px rgba(34, 197, 94, 0.7); }
       }
     </style>
   <script type="importmap">
