--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
       .animate-shake {
         animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
       }
-      .animate-pulse-bright {
-        animation: pulse-bright 1.5s ease-in-out infinite;
-      }
       .animate-flash-green {
         animation: flash-green 0.7s ease-out forwards;
       }
@@ -55,13 +52,28 @@
       }
 
       @keyframes pulse-bright {
-        0%, 100% {
-          text-shadow: 0 0 10px #06b6d4, 0 0 20px #06b6d4;
-        }
-        50% {
-          text-shadow: 0 0 20px #0891b2, 0 0 40px #0891b2;
-        }
+        0%, 100% { text-shadow: 0 0 10px #06b6d4, 0 0 20px #06b6d4; }
+        50% { text-shadow: 0 0 20px #0891b2, 0 0 40px #0891b2; }
       }
+      .animate-pulse-bright { animation: pulse-bright 1.5s ease-in-out infinite; }
+      
+      @keyframes pulse-bright-lime {
+        0%, 100% { text-shadow: 0 0 10px #a3e635, 0 0 20px #a3e635; }
+        50% { text-shadow: 0 0 20px #84cc16, 0 0 40px #84cc16; }
+      }
+      .animate-pulse-bright-lime { animation: pulse-bright-lime 1.5s ease-in-out infinite; }
+
+      @keyframes pulse-bright-sky {
+        0%, 100% { text-shadow: 0 0 10px #38bdf8, 0 0 20px #38bdf8; }
+        50% { text-shadow: 0 0 20px #0ea5e9, 0 0 40px #0ea5e9; }
+      }
+      .animate-pulse-bright-sky { animation: pulse-bright-sky 1.5s ease-in-out infinite; }
+
+      @keyframes pulse-bright-amber {
+        0%, 100% { text-shadow: 0 0 10px #fcd34d, 0 0 20px #fcd34d; }
+        50% { text-shadow: 0 0 20px #f59e0b, 0 0 40px #f59e0b; }
+      }
+      .animate-pulse-bright-amber { animation: pulse-bright-amber 1.5s ease-in-out infinite; }
       
       @keyframes flash-green {
         0%, 100% { box-shadow: 0 0 0px rgba(34, 197, 94, 0); }
