--- a/index.html
+++ b/index.html
@@ -80,15 +80,16 @@
         50% { box-shadow: 0 0 40px 10px rgba(34, 197, 94, 0.7); }
       }
     </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
     "react/": "https://aistudiocdn.com/react@^19.1.1/",
     "react": "https://aistudiocdn.com/react@^19.1.1",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.16.0",
-    "@vercel/analytics/": "https://aistudiocdn.com/@vercel/analytics@^1.3.1/",
-    "@vercel/analytics/react": "https://aistudiocdn.com/@vercel/analytics@^1.3.1/react"
+    "vite": "https://aistudiocdn.com/vite@^7.1.3",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.2",
+    "@vercel/analytics/": "https://aistudiocdn.com/@vercel/analytics@^1.5.0/"
   }
 }
 </script>
