--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-adsense-account" content="ca-pub-2089265756761019">
     <title>LUDUS: Knowledge Arena</title>
 <script type="importmap">
 {
@@ -21,6 +22,8 @@
   }
 }
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2089265756761019"
+     crossorigin="anonymous"></script>
 <link rel="stylesheet" href="/index.css">
 </head>
   <body>
