--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 </script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2089265756761019"
      crossorigin="anonymous"></script>
+<script src="https://cdn.tailwindcss.com"></script>
 <link rel="stylesheet" href="/index.css">
 </head>
   <body>
